# Kratos-Autonomous-Rover

./: README.md
kratos_cameras/: CMakeLists.txt  package.xml
kratos_cameras/config/: camera_profiles.yaml
kratos_cameras/include/kratos_cameras/: camera_stream_node.hpp  gst_stream_manager.hpp
kratos_cameras/launch/: kratos_cameras.launch.py
kratos_cameras/src/: camera_stream_node.cpp  gst_stream_manager.cpp  main.cpp
kratos_description/urdf/: kratos.xacro  kratos_body.xacro
kratos_gazebo/launch/: kratos_gazebo.launch.py
kratos_gazebo/urdf/: kratos.gazebo.xacro
kratos_gazebo/worlds/: cones1.world  empty.world  mars.world  test.world
kratos_localization/: CMakeLists.txt  package.xml
kratos_msgs/: CMakeLists.txt  package.xml
kratos_msgs/msg/: CameraStream.msg  CameraStreamList.msg
kratos_msgs/srv/: StopCameraStream.srv
kratos_nav2/: CMakeLists.txt
kratos_nav2/config/: nav2_params.yaml
kratos_nav2/launch/: kratos_nav2.launch.py
kratos_rtabmap/launch/: .kratos_rtabmap.launch.py.swp  kratos_rtabmap.launch.py  kratos_rtabmap_gazebo.launch.py
kratos_vel_clamp/: CMakeLists.txt
kratos_vel_clamp/scripts/: publish_empty_map.py
